# sendify-rs

./: .gitignore  Cargo.toml  README.md  releez.yml
examples/: example.rs  test.rs
src/: lib.rs  sendify.rs  sendify_mut.rs
